--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "line-messaging-api-rocket"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["uma <blog3170@gmail.com>"]
 
 [dependencies]
 rocket = "0.3.12"
-# line-messaging-api-rust = { path = "../line-messaging-api-rust"}
-line-messaging-api-rust = "0.1.1"
+line-messaging-api-rust = { path = "../line-messaging-api-rust"}
+# line-messaging-api-rust = "0.1.1"
