--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,4 @@ repository = "https://github.com/uma0317/line-messaging-api-rocket"
 [dependencies]
 rocket = "0.3.12"
 #line-messaging-api-rust = { path = "../line-messaging-api-rust"}
-line-messaging-api-rust = "0.1.1"
+line-messaging-api-rust = { git = "https://github.com/uma0317/line-messaging-api-rust" }
